# project5000

./: .gitignore  project_structure.txt  pyproject.toml
config/: settings.py  urls.py
users/: models.py
users/migrations/: 0001_initial.py
vehicle/: models.py  serializers.py  urls.py  views.py
vehicle/migrations/: 0001_initial.py
